--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ addons:
   chrome: stable
 language: node_js
 node_js:
-  - "11"
+  - "node"
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
